--- a/css/hero.css
+++ b/css/hero.css
@@ -53,7 +53,7 @@ body {
 /* show different image on iphones held vertically */
 @media (max-width: 450px){
   .hero {
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url('images/sb1.PNG');
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url('images/trophy3.jpg');
   }
 }
 
@@ -61,7 +61,7 @@ body {
 /* show different image on devices in landscape mode - height greater than width */
 @media (orientation: portrait){
   .hero {
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url("images/sb1.PNG");
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url("images/trophy3.jpg");
   }
 }
 
