--- a/css/screen.css
+++ b/css/screen.css
@@ -46,7 +46,7 @@ h1 {
 .my-bg-photo {
   background: url('images/test-3.jpg') no-repeat;
   background-size: cover;
-  background-position: 50% 40%; /* pushes picture up slightly  50% 34% for sb.jpeg*/
+  background-position: 50% 100%; /* pushes picture up slightly so "Trilling Bowl" displays properly on mnonitor  (OLD COMMENT 50% 34% for sb.jpeg)  */
   position: relative;
 }
 
@@ -64,7 +64,7 @@ h1 {
   left: 0;
   right: 0;
   background-color: #000;
-  opacity: .65;
+  opacity: .6;
 }
 
 .my-bg-photo-2 {
